--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
+    "moment": "^2.12.0",
     "node-sass": "^4.7.2",
-    "node-uuid": "^1.4.8",
+    "node-uuid": "^1.4.7",
     "sass-loader": "^6.0.7",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
-    "webpack": "^1.15.0"
+    "webpack": "^1.12.13"
   }
 }
